<resources>
    <!-- Texte écran d'accueil -->
    <string name="app_name">SpeedQuiz</string>
    <string name="btn_newPlayer">NEW PLAYER</string>
    <string name="btn_play">PLAY GAME</string>
    <string name="txtView_about_version">Version : 1.0</string>
    <string name="txtView_about_author">Author : Nathan Génesta</string>
    <string name="btn_about_ok">OK</string>

    <!-- Texte menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_questions">Questions</string>
    <string name="menu_about">About</string>

    <!-- Texte écran des paramètres -->
    <string name="error_too_many_questions">Error. You have selected too many questions.</string>
    <string name="ok_button">OK</string>
    <string name="settings_questions_number">10</string>
    <string name="settings_questions_speed">5 seconds</string>

    <!-- Texte écran de jeu -->
    <string name="textView_namePlayer1">Name player 1</string>
    <string name="textView_namePlayer2">Name player 2</string>
</resources>