<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    android:layout_marginBottom="10sp">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff5e00"
            app:title="@string/app_name"
            app:menu="@menu/main_menu" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_newPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_newPlayer"
        android:backgroundTint="#ff5e00"
        android:layout_marginTop="150sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_namePlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView_namePlayer1"
            android:layout_marginTop="30sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextLayout_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_namePlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textView_namePlayer2"
            android:layout_marginTop="30sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_play"
        android:backgroundTint="#ff5e00"
        android:visibility="invisible"
        android:layout_marginTop="150sp"/>

</LinearLayout>
